test/corpus/lists.txt
==================
Lists tasks quotes tables
==================

list {
    item { Metadata blocks }
    item { Headings from h(1) through h(6) }
}

list(ordered: true) {
    item { Lex the source }
    item { Parse into an AST }
}

list {
    task(done: true) { Design the grammar }
    task(done: false) { Reach v0.3.1 }
}

quote {
    Good design is as little design as possible.

    quote { A nested quote. }
}

table {
    row(header: true) {
        cell { Feature }
        cell { Status }
    }
    row {
        cell { Tables }
        cell { b{Done} }
    }
}

---

(document
  (list_block
    (list_item)
    (list_item))
  (list_block
    (attr_list
      (named_arg
        key: (identifier)
        value: (attr_value
          (boolean))))
    (list_item)
    (list_item))
  (list_block
    (task_item
      (attr_list
        (named_arg
          key: (identifier)
          value: (attr_value
            (boolean)))))
    (task_item
      (attr_list
        (named_arg
          key: (identifier)
          value: (attr_value
            (boolean))))))
  (quote_block
    (quote_block))
  (table_block
    (table_row
      (attr_list
        (named_arg
          key: (identifier)
          value: (attr_value
            (boolean))))
      (table_cell)
      (table_cell))
    (table_row
      (table_cell)
      (table_cell
        (bold)))))
