test/corpus/meta.txt
==================
Meta block
==================

meta {
    title: "Hello DocUP",
    author: "Prathmesh",
    version: "1.0.0"
}

---

(document
  (meta_block
    (meta_field key: (identifier) value: (string))
    (meta_field key: (identifier) value: (string))
    (meta_field key: (identifier) value: (string))))
